k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flavours
  labels:
    name: flavours
    app: flavours-platform
